--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div id="center">
     <h1>Rock Paper Scissors</h1>
     <div id="game-cards">
-      <button id="rock">&#x270A</button>
-      <button id="paper">&#x270B</button>
-      <button id="scissors">&#x270C</button>
+      <button>✊</button>
+      <button>✋️</button>
+      <button>✌</button>
     </div>
     <div id="result">
       <button></button>
