랜덤 숫자 맞추기 기능 구현

--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
       <button></button>
       <p></p>
     </div>
+    <div>
+      <h1>Random Number Game</h1>
+      <p class="bold">랜덤 숫자 맞추기🎲</p>
+      <div id="end-div">
+        <span>
+          범위를 정해주세요. 0 ~
+        </span>
+        <input type="text" />
+      </div>
+      <div id="choose-div">
+        <span>
+          랜덤으로 나올 숫자는?!
+        </span>
+        <input type="text" />
+        <div id="play-div">
+          <button>🎲</button>
+          <p>"play"</p>
+        </div>
+      </div>
+      <div id="hidden-div">
+        <div></div>
+        <div class="bold"></div>
+      </div>
+    </div>
   </div>
   <script src="./src/index.js"></script>
 </body>
