game 선택 버튼_html, css

--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
 </head>
 
 <body>
+  <div id="games-button">
+    <button class="selected-button">✊</button>
+    <button>🎲</button>
+  </div>
   <div id="center">
-    <h1>Rock Paper Scissors</h1>
-    <div id="game-cards">
-      <button>✊</button>
-      <button>✋️</button>
-      <button>✌</button>
+    <div id="rock-paper-scissors">
+      <h1>Rock Paper Scissors</h1>
+      <div id="game-cards">
+        <button>✊</button>
+        <button>✋️</button>
+        <button>✌</button>
+      </div>
+      <div id="result">
+        <button></button>
+        <p></p>
+      </div>
     </div>
-    <div id="result">
-      <button></button>
-      <p></p>
-    </div>
-    <div>
+    <div id="random-number-game" class="hidden">
       <h1>Random Number Game</h1>
       <p class="bold">랜덤 숫자 맞추기🎲</p>
       <div id="end-div">
