game 선택 기능 구현

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div id="games-button">
-    <button class="selected-button">✊</button>
-    <button>🎲</button>
+    <button id="rps-game-button" class="selected-button">✊</button>
+    <button id="random-game-button">🎲</button>
   </div>
   <div id="center">
     <div id="rock-paper-scissors">
@@ -35,7 +35,7 @@
         </span>
         <input type="text" />
       </div>
-      <div id="choose-div">
+      <div id="choice-div">
         <span>
           랜덤으로 나올 숫자는?!
         </span>
