기능별 js파일 생성

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       </div>
     </div>
   </div>
-  <script src="./src/index.js"></script>
+  <script src="./src/js/gameControls.js"></script>
+  <script src="./src/js/rpsGame.js"></script>
+  <script src="./src/js/randomNumberGame.js"></script>
 </body>
 
 </html>
