--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <div id="center">
     <div id="rock-paper-scissors">
-      <h1>Rock Paper Scissors</h1>
+      <h1 class="whiteText">Rock Paper Scissors</h1>
       <div id="game-cards">
         <button>✊</button>
         <button>✋️</button>
@@ -27,23 +27,24 @@
       </div>
     </div>
     <div id="random-number-game" class="hidden">
-      <h1>Random Number Game</h1>
-      <p class="bold">랜덤 숫자 맞추기🎲</p>
+      <h1 class="whiteText">Random Number Game</h1>
       <div id="end-div">
-        <span>
+        <span class="bold">
           범위를 정해주세요. 0 ~
         </span>
         <input type="text" />
       </div>
       <div id="choice-div">
-        <span>
+        <span class="bold">
           랜덤으로 나올 숫자는?!
         </span>
         <input type="text" />
-        <div id="play-div">
-          <button>🎲</button>
-          <p>"play"</p>
-        </div>
+      </div>
+      <div id="play-div">
+        <button>
+          🎲
+          <p class="whiteText">play</p>
+        </button>
       </div>
       <div id="hidden-div">
         <div></div>
